canary/deployment-new.yaml
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-02
spec:
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
       labels:
         app: demo-app
         version: "02"
    spec:
      containers:
        - name: app
          image: gcr.io/cloud-solutions-images/app:new
          livenessProbe:
             httpGet:
                path: /version
                port: 8080
          readinessProbe:
             httpGet:
                path: /version
                port: 8080
          lifecycle:
             preStop:
                exec:
                   command: ["/bin/bash", "-c", "sleep 5"]
          ports:
            - containerPort: 8080
